--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
 
 deploy:
   provider: pages
+  local-dir: build
   skip-cleanup: true
   github-token: $MOZART_GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
