--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://moz-art.github.io/bach"
+  "homepage": "https://moz-art.github.io/bach",
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
