--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^3.4.3",
     "reactstrap": "^5.0.0-beta",
     "styled-components": "^3.1.6"
   },
